[feat] account adapter base code